crates/smart-config/tests/ui/derives/flattened_config_with_rename.stderr
error: `rename` attribute is useless for flattened configs; did you mean to make a config nested?
  --> tests/ui/derives/flattened_config_with_rename.rs:10:5
   |
10 | /     #[config(rename = "flat", flatten)]
11 | |     bogus: NestedConfig,
   | |_______________________^
